2014-01-16 Joseph Myers  <joseph@codesourcery.com>

	* math/test-fpucw-ieee.c: Use <> in #include of test-fpucw.c.
	* math/test-fpucw-static.c: Likewise.

2013-01-16  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16453]
	* nscd/netgroupcache.c (addgetnetgrentX): Don't use alloca.

2014-01-15  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/sotruss-lib.c: New file: sotruss-lib.so
	implementation for powerpc.

2014-01-15  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #14782]
	* sysdeps/posix/system.c (__libc_system): Do not enable
	asynchronous cancellation.

2014-01-15  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	[BZ #16427]
	* sysdeps/ieee754/ldbl-128/w_expl.c (__expl): Invoke the non-IEEE
	handling only for numbers special also in the IEEE case.

2014-01-15  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/fpu/libm-test-ulps: Regenerate.

2014-01-11  Allan McRae  <allan@archlinux.org>

	* po/bg.po: Update Bulgarian translation from translation project.

	* po/de.po: Update German translation from translation project.

2014-01-10  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/generic/gcc-compat.h: New file.

2014-01-10  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* benchtests/asin-inputs: Correct slow inputs.
	* benchtests/acos-inputs: Likewise.

2014-01-10  Allan McRae  <allan@archlinux.org>

	* po:sv.po: Update Swedish translation from translation project.

	* po/vi.po: Update Vietnamese translation from translation project.

	* po/eo.po: Update Esperanto translation from translation project.

	* po/cs.po: Update Czech translation from translation project.

	* po/nl.po: Update Dutch translation from translation project.

	* po/pl.po: Update Polish translation from translation project.

	* po/ru.po: Update Russian translation from translation project.

	* po/uk.po: Update Ukrainian translation from translation project.

2014-01-08  Brooks Moses  <bmoses@google.com>

	* elf/dl-load.c: Fix comment typo.
